update first project

--- a/Project01.ipynb
+++ b/Project01.ipynb
@@ -20,7 +20,7 @@
         "colab_type": "text"
       },
       "source": [
-        "In this project I will make a machine learning code in python to distiguish a pig from a dog from data like: long hair, short legs and if barf"
+        "In this project I will make a machine learning code in python to distiguish a pig from a dog from data like: long hair, short legs and if barks"
       ]
     },
     {
